fixed navabar spacing and margin-top

--- a/client/src/style/Nav.css
+++ b/client/src/style/Nav.css
@@ -44,7 +44,6 @@
 nav {
   font-family: 'dacasaregular', Arial, sans-serif;
   text-align: center;
-  margin-top: 5%;
   letter-spacing: 1px;
 }
 
@@ -68,15 +67,22 @@ nav {
 }
 
 @media (min-width: 992px) {
+  .nav-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   .navbar-expand-lg {
     display: flex;
     -ms-flex-flow: row nowrap;
     flex-flow: row nowrap;
     -ms-flex-pack: start;
-    justify-content: flex-start;
+    justify-content: space-around;
   }
 
   .navbar-expand-lg .navbar-nav {
-    
+    margin-top: 0;
+    justify-content: center;
   }
 }
